package ar.edu.davinci.domain;

public class Classic extends Membresia {

    public Classic(TipoMembresia tipoMembresia) {
        super(tipoMembresia);
        //TODO Auto-generated constructor stub
    }
   
}
