package ar.edu.davinci.domain;

public class Economic extends Membresia {

    public Economic(TipoMembresia tipoMembresia) {
        super(tipoMembresia);
        //TODO Auto-generated constructor stub
    }

}
