package ar.edu.davinci.domain;

public class MiniGrua extends CamionAuxilio {

	public MiniGrua(Ubicacion ubicacion, String patente) {
		super(ubicacion, patente);
	}

	
}
