package ar.edu.davinci.domain;

public interface ModuloPagos {

	public static void tieneMora() {
		
	}
}
