package ar.edu.davinci.domain;

public class Platinum extends Membresia {

    public Platinum(TipoMembresia tipoMembresia) {
        super(tipoMembresia);
        //TODO Auto-generated constructor stub
    }

  

    
}
